<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:keep="@menu/menu_main">

    <item
        android:id="@+id/homeFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/home" />
    <item
        android:id="@+id/articleFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/article" />

    <item
        android:id="@+id/analizeFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/analize" />
    <item
        android:id="@+id/communityFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/community" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/profile" />
</menu>